--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,8 +1,22 @@
+<html lang = "en">
+<head>
+    <title>Ravendra Nand lab Page </title>
+    <h1>Ravendra Nand </h1>
+</head>
+<body>
+    <ul>
+
+        fruits list:
+         <li>apple</li>
+        <li>orange</li>
+        <li>pomelo</li>
+        </ul>
     
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
+<img src="Adorable cat (2).jpg", alt="Puss in Boots"> <br>
+Puss in Boots <br> 
+Lorem ipsum generator: https://www.lipsum.com/   
+</body>
+</html>
+
     
-    Lorem ipsum generator: https://www.lipsum.com/
+   
