--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -41,7 +41,7 @@
                 <textarea rows="5" cols="33" id="message" name = "message" placeholder="Enter your message here"></textarea>
             </li>
                 
-            <li>
+            <li class="checkbox-list-label">
                 <p>Age</p>
                 <ul class="flex-inner">
                     <li>
@@ -60,8 +60,10 @@
                     </li>
                 </ul>
             </li>
+
             <li>
-                <button class="submit" id="submit" name = "submit">Submit</button>
+                <button type="submit" id="submit" name = "submit">Submit</button>
+                <button type="submit" id="activate" name="activate">Activate</button>
             </li>
         </ul>
     </form>
