--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -63,11 +63,32 @@
 
             <li>
                 <button type="submit" id="submit" name = "submit">Submit</button>
-                <button type="submit" id="activate" name="activate">Activate</button>
+                <button onclick=testFunction() type = "button" id="activate" name="activate">Activate</button>
             </li>
         </ul>
     </form>
-</body>
+    <script> 
+        function testFunction() {
+            fetch('/api')
+            .then((response) => response.text())
+            .then((response) => {
+                console.log(response);
+            })
+            /*const myHeading = myHeading;  I know I can use these, but tried the single line ver. */
+             document.querySelector('h1').textContent = 'Lab 5 for Ravendra Nand ';
+             document.querySelector('body').style.backgroundColor = "#eb4b4b";
+             document.querySelector('ul').style.margin ="0 auto";
 
+             const checkBox = document.querySelectorAll(".checkbox-list-label")
+             checkBox.forEach((p)=> {
+                p.textContent = 'Fruits'
+                })
+             const listLabel = document.querySelectorAll(".flex-inner");
+             listLabel.forEach((label) =>{
+                 label.textContent = "pear"
+             })
+            }   
+         </script>
 
+    </body>
 </div>
