Small edit to pass a test

--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -41,8 +41,8 @@
                     <textarea rows="5" cols="33" id="message" name = "message" placeholder="Enter your message here"></textarea>
                 </li>
                     
-                <li class="checkbox-list-label">
-                    <p>Age</p>
+                <li>
+                    <p class="checkbox-list-label">Age</p>
                     <ul class="flex-inner">
                         <li>
                             <input type="checkbox" id="eighteen-to-thirtyfive" name= "eighteen-to-thirtyfive">
