--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -9,5 +9,16 @@
 
     - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
 -->
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"  href="styles.css">
+    <link 
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
 
