--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -11,12 +11,21 @@
 -->
 <html lang="en">
 <head>
+    <title>Ravendra Nand's Lab 7</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="styles.css">
-    <link 
-    <title>Document</title>
+    <link >
+    
+
 </head>
+    <div class = wrapper>
+        <div class = container>
+            <div class = header>
+                <h1> Ravendra Nand's Lab 7</h1>
+            </div>
+        </div>
+    </div>
 <body>
     
 </body>
