--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -15,19 +15,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="styles.css">
-    <link >
-    
+    <link rel="chart" href="https://canvasjs.com/html5-javascript-bar-chart/">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
 
 </head>
-    <div class = wrapper>
-        <div class = container>
-            <div class = header>
-                <h1> Ravendra Nand's Lab 7</h1>
+<body>
+    <div class = "wrapper">
+        <div class = "container">
+            <div class = "flex-outer">
+                <div class = "header">
+                     <h1> Ravendra Nand's Lab 7</h1>
+                </div>
+
+                <div id="chartContainer">
+
+                </div>
+
+                <button type="submit"
+                class = "submit"
+                name="submit" >
+                    Submit
+                </button>
+
             </div>
         </div>
     </div>
-<body>
     
+    <script src="canvasjs.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
